Minor change to wording in heuristics section

--- a/p4.md
+++ b/p4.md
@@ -50,7 +50,7 @@ In our heuristic evaluations we discovered numerous issues of varying severity. 
 
 Our level 3 and level 2 ratings were correlated with the heuristics match between system and the real world and visibility of system status and dealt with the user not being able to understand clearly how the functionality of the system works. We discovered though that the user would be more impacted by the level 3 issues than the level 2 issues. Therefore, the level 3 issues should be fixed before the level 2 issues. Fixes for the level 3 issues included adding more buttons for functionality, more images for identifying and making scrolling clear to the user. Fixes for level 2 issues included making the functionality clearer to the user through better placement and more real world representation. 
 
-Our level 1 issues were correlated with the heuristics consistency and standards and recognition rather than recall and dealt with minor issues such as having the settings button on the right side of the screen and having icons that were a little bit more informative as to their purpose. While these issues are still important, the user can still use the system and understand what to do without any fixes. 
+Our level 1 issues were correlated with the heuristics consistency and standards and recognition rather than recall and dealt with minor issues such as having the settings button on the right side of the screen and having icons that needed to be a little bit more informative as to their purpose. While these issues are still important, the user can still use the system and understand what to do without any fixes. 
 
 ## Recommendations for Next Iteration of Design
 
