--- a/p4.md
+++ b/p4.md
@@ -24,7 +24,7 @@ Take this app out on an evening stroll in a nearby field or on a hike in one of 
 
 ## Design Problem
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor eu risus lacinia condimentum. In molestie eget enim at pharetra. Mauris sed hendrerit felis, eu cursus est. Integer euismod laoreet ante, a maximus leo pretium vel. Nullam cursus elit et laoreet convallis. Ut commodo gravida eros, vel iaculis libero maximus vel. Donec malesuada ornare lorem, at lacinia diam mollis ac. Pellentesque hendrerit mauris purus, in cursus justo ullamcorper ac. Mauris faucibus, velit eget gravida posuere, quam felis vestibulum tellus, vitae placerat dolor purus fringilla justo. Nullam sodales ex eget augue tincidunt, vel aliquet dui placerat. Vestibulum a ligula non orci dapibus pretium. Sed et pulvinar ipsum, quis gravida diam. Pellentesque non neque mi. Vivamus quis fringilla nibh.
+Our design problem was to design a system that allows people enjoying the outdoors in Alberta to identify wildflowers that they come across (e.g. while at the park or on a hike), learn more about their findings, document their findings with photos and notes, as well as share their findings with others. Essentially, this system combines a traditional hard copy guide with a personal photo album/notebook.
 
 ## User Research and Findings
 
