Edited design problem

--- a/p4.md
+++ b/p4.md
@@ -24,7 +24,7 @@ Take this app out on an evening stroll in a nearby field or on a hike in one of 
 
 ## Design Problem
 
-Our design problem was to design a system that allows people enjoying the outdoors in Alberta to identify wildflowers that they come across (e.g. while at the park or on a hike), learn more about their findings, document their findings with photos and notes, as well as share their findings with others. Essentially, this system combines a traditional hard copy guide with a personal photo album/notebook.
+Our design problem was to design a system that allows people enjoying the outdoors in Alberta to identify wildflowers that they come across (e.g. while at the park or on a hike), learn more about their findings, document their findings with photos and notes, as well as share their findings with others. Essentially, this system combines a traditional hard copy guide with a personal photo album/notebook. Users do not need to possess any technical knowledge about wildflowers/wildflower identification prior to using the system. Any prior training or knowledge might be helpful, but is not necessary to use and enjoy the system.
 
 ## User Research and Findings
 
