Added a sentence to Design and Justification

--- a/p4.md
+++ b/p4.md
@@ -41,7 +41,7 @@ The common themes among our findings from all methods are the liberal use of hig
 
 Our final design was developed keeping in mind the data we collected from the investigation phase and the feedback we received from our storyboard and low-fi prototype. We incorporated the must have design elements including uncluttered description pages, two types of identification techniques and a user log. 
 
-For the description pages, we chose to use headers for each section with the information hidden in drop-down sections, as opposed to having all of it displayed by default. This gives the user control over how much or how little information they want to access. A few key pieces of information, such as plant toxicity and species names are always visible on the screen. The two identification techniques give the user choice. The photo recognition identification technique is quick and easy to use, with just one click of a button. We modeled the camera screen after existing smartphone camera screens for familiarity. Identifying by manually choosing characteristics is another technique the user can use if the photo recognition does not give them results. We chose to display the selectable filters as images with the small text underneath to make the characteristic easier to recognize. The user log, My Collection, is a feature that separates this app from those currently on the market. It allows users to save their wildflower sightings. This feature makes the app personalizable where users can add/view additional images that they've taken of the flower. They can also add/view personal notes, or share their find on social media.
+For the description pages, we chose to use headers for each section with the information hidden in drop-down sections, as opposed to having all of it displayed by default. This gives the user control over how much or how little information they want to access. A few key pieces of information, such as plant toxicity and species names are always visible on the screen. The two identification techniques give the user choice. The photo recognition identification technique is quick and easy to use, with just one click of a button. We modeled the camera screen after existing smartphone camera screens for familiarity. Identifying by manually choosing characteristics is another technique the user can use if the photo recognition does not give them satisfactory results. We chose to display the selectable filters as images with the small text underneath to make the characteristic easier to recognize. This method avoids confusion and improves communication by telling the user exactly which parts of the wildflower to look at, and provides visual references to aide them in determining/recognizing characteristics. The user log, My Collection, is a feature that separates this app from those currently on the market. It allows users to save their wildflower sightings. This feature makes the app personalizable where users can add/view additional images that they've taken of the flower. They can also add/view personal notes, or share their find on social media.
 
 
 ## Heuristic Evaluation and Findings
